# dsp-admin-svc

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  Makefile  README.md  WORKSPACE  build.gradle  go.mod  go.sum  package-lock.json  package.json  rollup.config.js  settings.gradle  tsconfig.json
public/admin/: keycloak.json
services/admin/backend/api/handler/: BUILD.bazel  listNode_handler.go  organization.go  project.go
services/admin/backend/api/middleware/: BUILD.bazel  cors.go  permissions.go
services/admin/backend/api/presenter/: BUILD.bazel  listNode_presenter.go  organization.go  project.go
services/admin/backend/cmd/: BUILD.bazel  main.go
services/admin/backend/config/: keycloak_realm_key.rsa.pub
services/admin/backend/entity/: BUILD.bazel  entity.go  error.go  listNode.go  listNode_test.go  project.go  project_test.go
services/admin/backend/entity/organization/: organization_test.go
services/admin/backend/entity/project/: error.go
services/admin/backend/infrastructure/project_repository/: BUILD.bazel  project_inmem.go
services/admin/backend/infrastructure/repository/: BUILD.bazel  listNode_badgerdb.go  listNode_inmem.go  lists_badgerdb.go  lists_inmem.go
services/admin/backend/service/project/: interface.go  project.go  project_test.go
services/admin/backend/service/user/: user_test.go
services/admin/backend/usecase/listNode/: BUILD.bazel  inmem.go  interface.go  service.go  service_test.go
services/admin/backend/usecase/project/: BUILD.bazel  interface.go  service.go  service_test.go
services/admin/backend/usecase/project/testing/: BUILD.bazel  inmem.go
services/admin/docker/: Dockerfile  build.gradle
services/admin/frontend/: AdminServices.svelte  Header.svelte  Home.svelte  ProjectPage.svelte  Projects.svelte  ProjectsApp.svelte  interfaces.ts  main.ts  routes.ts  store.ts
services/admin/frontend/content/: ProjectInfo.svelte  Projects.svelte
services/auth/: BUILD.bazel  main.go
services/auth/static/: BUILD.bazel  index.html
services/metadata/backend/cmd/: main.go
services/metadata/backend/config/: config_dev.go
services/metadata/backend/entity/: organization.go  organization_test.go
services/metadata/backend/usecase/organization/: service_test.go
services/resource/backend/: build.gradle
services/resource/backend/config/: config_dev.go
services/resource/backend/entity/: organization_test.go
shared/go/pkg/metric/: interface.go
shared/go/pkg/valueobject/: BUILD.bazel  aggregatetype.go  shortcode.go  shortcode_test.go  timestamp.go
shared/svelte/: Loading.svelte
src/client/: BUILD.bazel  rollup.config.js
