package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")


#load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
#load("@build_bazel_rules_svelte//:defs.bzl", "svelte", "bundle_dev", "bundle_prod")
#
#svelte(
#  name = "App",
#  entry_point = "App.svelte",
#  srcs = ["main.js"],
#  deps = [
#    "//src/client/treeview:Treeview",
#    "//src/client/grid:Grid"
#  ]
#)
#
#bundle_prod(
#  name = "bundle_prod",
#  entry_point = "main.js",
#  deps = [
#    ":App",
#    "@npm//lodash"
#  ],
#)
#
#bundle_dev(
#  name = "bundle_dev",
#  entry_point = "main.js",
#  deps = [
#    ":App",
#    "@npm//lodash"
#  ],
#)
#
#nodejs_binary(
#  name = "dev_server",
#  entry_point = "@npm//:node_modules/lite-server/bin/lite-server",
#  templated_args = ["--baseDir=src/client"],
#  tags = ["ibazel_notify_changes"],
#  data = [
#      "index.html",
#      ":bundle_dev",
#      "@npm//lite-server",
#  ],
#)

filegroup(
    name = "svelte_files",
    srcs = glob([
       "**/*.svelte",
    ]),
)

ts_library(
    name = "library",
    srcs = glob([
        "**/*.ts",
    ]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//:node_modules",
    ]
)

filegroup(
    name = "library.js",
    srcs = [":library"],
    output_group = "es6_sources",
)

rollup_bundle(
    name = "client_bundling",
    config_file = "//:rollup.config.js",
    entry_point = ":main.ts",
    format = "esm",
    output_dir = True,
    supports_workers = True,
    deps = [
        ":svelte_files",
        ":library.js",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//:node_modules"
    ],
)
