package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")

filegroup(
    name = "srcs",
    srcs = glob([
        "**/*.ts",
        "**/*.svelte",
    ]),
)

rollup_bundle(
    name = "client_bundling",
    config_file = "rollup.config.js",
    entry_point = "main.ts",
    format = "umd",
    output_dir = True,
    supports_workers = True,
    deps = [
        ":srcs",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//:node_modules"
    ],
)
