load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "entity",
    srcs = [
        "entity.go",
        "error.go",
        "listNode.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/entity",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "listNode_test",
    srcs = ["listNode_test.go"],
    size = "small",
    visibility = ["//visibility:public"],
    embed = [":entity"],
    deps = ["@com_github_stretchr_testify//assert"],
)
