load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "project_repository",
    srcs = [
        "project_inmem.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/infrastructure/project_repository",
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/entity",
    ],
)
