load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "listNode",
    srcs = [
        "inmem.go",
        "interface.go",
        "service.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/usecase/listNode",
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/entity",
    ],
)

go_library(
    name = "inmem",
    testonly = True,
    srcs = ["inmem.go"],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/usecase/listNode",
    visibility = ["//visibility:public"],
    deps = [
        ":listNode",
        "//services/admin/backend/entity",
    ],
)

go_test(
    name = "service_test",
    srcs = ["service_test.go"],
    visibility = ["//visibility:public"],
    size = "small",
    embed = [":listNode"],
    deps = [
        "@com_github_stretchr_testify//assert"
    ],
)
