load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "testing",
    testonly = True,
    srcs = ["inmem.go"],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/usecase/project/testing",
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/entity",
    ],
)
